intTests/test_type_errors/err002.log.good
Loading file "err002.saw"
Type errors:
  err002.saw:5:44-5:57: Error: Type mismatch.
    Expected: String
    Found:    [LLVMType]

  <type of llvm_alias>:1:1-1:7: Note: The type String arises from this type annotation
  err002.saw:5:44-5:57: Note: The type [LLVMType] arises from the type of this term


FAILED
